--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,6 +55,21 @@ jobs:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'plan'
         tf_actions_working_dir: "./"
+
+    - name: Submit plan for approval
+      uses: jbergknoff/github-action-wait-for-terraform-plan-approval@v1
+      with:
+        command: submit
+        plan_contents: ${{steps.plan.outputs.stdout}}
+
+    # Snip: send a Slack DM asking somebody to visit `steps.submit_plan.outputs.approval_prompt_url` to approve
+
+    - name: Wait for approval
+      uses: jbergknoff/github-action-wait-for-terraform-plan-approval@v1
+      with:
+        command: wait
+        plan_id: ${{steps.submit_plan.outputs.plan_id}}
+        timeout_seconds: 600
  
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -63,3 +78,5 @@ jobs:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'apply'
         tf_actions_working_dir: "./"
+
+      
