--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,6 +50,7 @@ jobs:
         tf_actions_working_dir: "./"
          
     - name: 'Terraform Plan'
+      id: plan
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
