--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,7 @@
+
+
+
+
 name: Terraform Apply Workflow
 
 on:
@@ -7,7 +11,14 @@ on:
 
 jobs:
   terraform_apply:
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      TF_VERSION: 1.5.7
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
