Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,17 @@ trigger:
 pool:
   name: keda-aks-pool
 
-steps:
-- script: echo Hello, world!
+jobs:
+- job: Job1
   displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+  steps:
+  - script: echo Hello, world!
+    displayName: 'Run a one-line script'
+ 
+- job: Job2
   displayName: 'Run a multi-line script'
+  steps:
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
