--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,15 @@ pool:
   name: keda-aks-pool
 
 jobs:
-- job: Job1
-  displayName: 'Run a one-line script'
+- job: Job_One
+  displayName: 'Job One - Single Line Script'
   steps:
   - script: echo Hello, world!
     displayName: 'Run a one-line script'
  
-- job: Job2
-  displayName: 'Run a multi-line script'
+- job: Job_Two
+  displayName: 'Job Two - Multi Line Script'
+  dependsOn: Job_One
   steps:
   - script: |
       echo Add other tasks to build, test, and deploy your project.
